--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "t2w-vue",
   "version": "1.0.0",
-  "description": "team2work app",
+  "description": "team2work Vue.js app",
   "author": "Markus Danek <mdanek@sipwise.com>",
   "private": true,
   "scripts": {
@@ -20,11 +20,14 @@
     "babel-preset-latest": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "bootstrap-loader": "2.0.0-beta.22",
+    "bootstrap-sass": "3.3.7",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
+    "css-loader": "0.26.2",
     "eventsource-polyfill": "^0.9.6",
+    "exports-loader": "0.6.4",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.0",
@@ -32,14 +35,18 @@
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "imports-loader": "0.7.1",
+    "jquery": "3.1.1",
     "node-sass": "4.5.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
+    "resolve-url-loader": "2.0.2",
     "rimraf": "^2.6.0",
     "sass-loader": "6.0.2",
     "semver": "^5.3.0",
-    "url-loader": "^0.5.7",
+    "style-loader": "0.13.2",
+    "url-loader": "0.5.8",
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.1",
