--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "http-proxy-middleware": "^0.17.3",
     "imports-loader": "0.7.1",
     "jquery": "3.1.1",
+    "marker-clusterer-plus": "2.1.4",
     "node-sass": "4.5.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
@@ -51,6 +52,7 @@
     "vue-resource": "1.2.1",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.1",
+    "vue2-google-maps": "0.6.4",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
