--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "upload": "npm run build; s3-deploy './dist/**' --cwd './dist/' --signatureVersion v4 --bucket www.team2work.at"
   },
   "dependencies": {
+    "lodash": "4.17.4",
     "vue": "^2.2.1",
     "vue-multiselect": "1.1.4",
     "vue-router": "^2.2.0"
