--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lodash": "4.17.4",
     "vue": "^2.2.1",
     "vue-multiselect": "1.1.4",
-    "vue-router": "^2.2.0"
+    "vue-router": "^2.2.0",
+    "vuex": "2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
