--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
-    "upload": "npm run build; s3-deploy './dist/**' --cwd './dist/' --signatureVersion v4 --bucket www.team2work.at"
+    "upload": "npm run build; s3-deploy './dist/:*+' --cwd './dist/' --signatureVersion v4 --bucket www.team2work.at"
   },
   "dependencies": {
     "lodash": "4.17.4",
     "vue": "^2.2.1",
     "vue-multiselect": "1.1.4",
     "vue-router": "^2.2.0",
+    "vue-scroll-behavior": "^0.1.6",
     "vuex": "2.3.1"
   },
   "devDependencies": {
