--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
-    "upload": "npm run build; s3-deploy './dist/:*+' --cwd './dist/' --signatureVersion v4 --bucket www.team2work.at"
+    "upload": "npm run build; s3-deploy './dist/**' --cwd './dist/' --signatureVersion v4 --bucket www.team2work.at"
   },
   "dependencies": {
     "lodash": "4.17.4",
