--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "lodash": "4.17.4",
     "vue": "^2.2.1",
+    "vue-analytics": "^5.2.0",
     "vue-multiselect": "1.1.4",
     "vue-router": "^2.2.0",
     "vue-scroll-behavior": "^0.1.6",
