--- a/package.json
+++ b/package.json
@@ -11,67 +11,67 @@
   },
   "dependencies": {
     "lodash": "4.17.4",
-    "vue": "^2.2.1",
+    "vue": "^2.5.2",
     "vue-analytics": "^5.2.0",
-    "vue-multiselect": "1.1.4",
-    "vue-router": "^2.2.0",
-    "vue-scroll-behavior": "^0.1.6",
-    "vuex": "2.3.1"
+    "vue-multiselect": "^2.0.6",
+    "vue-router": "^3.0.1",
+    "vue-scroll-behavior": "^0.2.0",
+    "vuex": "^3.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
+    "autoprefixer": "^7.1.6",
     "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "bootstrap-loader": "2.0.0-beta.22",
+    "bootstrap-loader": "^2.2.0",
     "bootstrap-sass": "3.3.7",
-    "chalk": "^1.1.3",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "0.26.2",
+    "chalk": "^2.3.0",
+    "connect-history-api-fallback": "^1.4.0",
+    "copy-webpack-plugin": "^4.2.0",
+    "css-loader": "^0.28.7",
     "eventsource-polyfill": "^0.9.6",
     "exports-loader": "0.6.4",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.10.0",
+    "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "imports-loader": "0.7.1",
-    "jquery": "3.1.1",
+    "jquery": "^3.2.1",
     "marker-clusterer-plus": "2.1.4",
-    "node-sass": "4.5.0",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "node-sass": "^4.5.3",
+    "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.1.0",
-    "resolve-url-loader": "2.0.2",
+    "resolve-url-loader": "^2.2.0",
     "rimraf": "^2.6.0",
-    "s3-deploy": "0.7.3",
-    "sass-loader": "6.0.2",
+    "s3-deploy": "^0.7.5",
+    "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
-    "style-loader": "0.13.2",
-    "url-loader": "0.5.8",
-    "vue-awesome": "2.1.0",
-    "vue-loader": "^11.1.4",
-    "vue-resource": "1.2.1",
-    "vue-style-loader": "^2.0.0",
-    "vue-template-compiler": "^2.2.1",
-    "vue2-google-maps": "0.6.4",
-    "webpack": "^2.2.1",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "vue-awesome": "^2.3.3",
+    "vue-loader": "^13.3.0",
+    "vue-resource": "^1.3.4",
+    "vue-style-loader": "^3.0.3",
+    "vue-template-compiler": "^2.5.2",
+    "vue2-google-maps": "^0.8.4",
+    "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
+    "webpack-hot-middleware": "^2.20.0",
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserlist": [
+  "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
