--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "4.17.4",
     "vue": "^2.5.2",
     "vue-analytics": "^5.2.0",
+    "vue-markdown": "^2.2.4",
     "vue-multiselect": "^2.0.6",
     "vue-router": "^3.0.1",
     "vue-scroll-behavior": "^0.2.0",
