--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "lodash": "4.17.4",
+    "raven-js": "^3.19.1",
     "vue": "^2.5.2",
     "vue-analytics": "^5.2.0",
     "vue-markdown": "^2.2.4",
