--- a/package.json
+++ b/package.json
@@ -11,65 +11,65 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "es6-promise": "^4.1.1",
-    "lodash": "4.17.4",
-    "raven-js": "^3.21.0",
-    "vue": "^2.5.13",
-    "vue-analytics": "^5.7.1",
+    "es6-promise": "^4.2.4",
+    "lodash": "^4.17.5",
+    "raven-js": "^3.23.3",
+    "vue": "^2.5.16",
+    "vue-analytics": "^5.9.1",
     "vue-markdown": "^2.2.4",
-    "vue-multiselect": "^2.0.8",
+    "vue-multiselect": "^2.1.0",
     "vue-router": "^3.0.1",
     "vue-scroll-behavior": "^0.2.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.3",
+    "autoprefixer": "^8.1.0",
     "babel-core": "^6.22.1",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "bootstrap-loader": "^2.2.0",
     "bootstrap-sass": "3.3.7",
-    "chalk": "^2.3.0",
+    "chalk": "^2.3.2",
     "connect-history-api-fallback": "^1.5.0",
-    "copy-webpack-plugin": "^4.3.0",
-    "css-loader": "^0.28.7",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
     "eventsource-polyfill": "^0.9.6",
-    "exports-loader": "0.6.4",
-    "express": "^4.16.2",
+    "exports-loader": "^0.7.0",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
+    "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "imports-loader": "0.7.1",
-    "jquery": "^3.2.1",
+    "html-webpack-plugin": "^3.0.7",
+    "http-proxy-middleware": "^0.18.0",
+    "imports-loader": "^0.8.0",
+    "jquery": "^3.3.1",
     "marker-clusterer-plus": "2.1.4",
     "node-sass": "^4.7.2",
-    "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.1.0",
-    "resolve-url-loader": "^2.2.1",
+    "opn": "^5.3.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "ora": "^2.0.0",
+    "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.0",
-    "s3-deploy": "^0.8.0",
-    "sass-loader": "^6.0.6",
-    "semver": "^5.3.0",
-    "style-loader": "^0.19.1",
-    "url-loader": "^0.6.2",
-    "vue-awesome": "^2.3.4",
-    "vue-loader": "^13.6.0",
-    "vue-resource": "^1.3.5",
-    "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.13",
-    "vue2-google-maps": "^0.8.4",
+    "s3-deploy": "^0.10.0",
+    "sass-loader": "^6.0.7",
+    "semver": "^5.5.0",
+    "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
+    "vue-awesome": "^2.3.5",
+    "vue-loader": "^14.2.1",
+    "vue-resource": "^1.5.0",
+    "vue-style-loader": "^4.0.2",
+    "vue-template-compiler": "^2.5.16",
+    "vue2-google-maps": "^0.8.11",
     "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.9.1",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-dev-middleware": "^2.0.2",
-    "webpack-hot-middleware": "^2.21.0",
-    "webpack-merge": "^4.1.1"
+    "webpack-hot-middleware": "^2.21.2",
+    "webpack-merge": "^4.1.2"
   },
   "engines": {
     "node": ">= 4.0.0",
