--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "eventsource-polyfill": "^0.9.6",
     "exports-loader": "^0.7.0",
     "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
@@ -48,6 +48,7 @@
     "imports-loader": "^0.8.0",
     "jquery": "^3.3.1",
     "marker-clusterer-plus": "2.1.4",
+    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.7.2",
     "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
@@ -62,12 +63,12 @@
     "vue-awesome": "^2.3.5",
     "vue-loader": "^14.2.1",
     "vue-resource": "^1.5.0",
-    "vue-style-loader": "^4.0.2",
+    "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
     "vue2-google-maps": "^0.8.11",
-    "webpack": "^3.10.0",
+    "webpack": "^4.4.1",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-dev-middleware": "^2.0.2",
+    "webpack-dev-middleware": "^3.1.0",
     "webpack-hot-middleware": "^2.21.2",
     "webpack-merge": "^4.1.2"
   },
